--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,33 +1,45 @@
 :root{
-    --color1: #9dc19e;
-    --color2: #72b16d;
-    --color3: #8cb2b5cc;
-    --color4: #0B2442;
-    --page2: #CCD8E0;
-    --color: #4B8547;
+    --page: #CCD8E0;
+    --color_text: #0B2442;
+    --color_h1: #4B8547;
+    --color_h2: #213A1F;
+
+    --color_accent: #72b16d;
+    --color_hero: #8cb2b5cc;
+    --color_row: #9dc19e;
+
+    /*#4B8547*/
+
+    /*#9dc19e*/
+
     --margin_header: 20px 0;
+}
+
+* {
+    margin: 0;
+    padding: 0;
 }
 
 
 h1{
     font-family: "Contrail One";
-    color: var(--color);
+    color: var(--color_h1);
     font-size: 55px;
 }
 
 h2 {
     font-family: "Contrail One";
-    color: var(--color);
+    color: var(--color_h2);
     font-size: 30px;
 }
 
 p {
     font-family: "Kantumruy Pro";
-    color: var(--color4);
+    color: var(--color_text);
 }
 
 html{
-    background-color: var(--page2)
+    background-color: var(--page)
 }
 
 
@@ -36,9 +48,7 @@ header {
     display: grid;
     grid-template: 150px/ 30% 70%;
     align-items: center;
-    background-color: var(--color4);
-    color: var(--color2);
-    margin: var(--margin_header);
+    background-color: var(--color_text);
 }
 
 header img {
@@ -57,7 +67,7 @@ ul {
 
 
 li a {
-    color: var(--color2);
+    color: var(--color_accent);
     text-decoration: none;
     margin: 20px;
     font-size: 30px;
@@ -80,7 +90,7 @@ li a {
     width: 100%;
     text-align: center;
     position: absolute;
-    top: 75px;
+    top: 110px;
     text-shadow:
     black 0 1px,
     black 1px 0,
@@ -91,7 +101,7 @@ li a {
 .hero article {
     width: 50%;
     height: 100px;
-    background-color: var(--color3);
+    background-color: var(--color_hero);
     position: absolute;
     top: 200px;
     left: 25%;
@@ -110,20 +120,26 @@ li a {
     border: 1px solid black;
 }
 
+
+
+
+
 .row1 {
-    background-color: var(--color1);
-    padding: 20px 50%;
+    text-align: center;
+    padding: 20px;
+    background-color: var(--color_row);
+
 }
 
 .history {
     margin: var(--margin_header);
     display: grid;
-    grid-template: 100px 200px / 2fr 1fr 2fr
+    grid-template: 75px 200px / 2fr 1fr 2fr;
+    grid-row-gap: 20px ;
 }
 
 .history h2 {
-    grid-area: 1 / 1 / 2 / 4;
-    place-self: center;
+    grid-column: 1 / 4;
 
 }
 
@@ -131,7 +147,7 @@ li a {
     width: 100px;
     height: auto;
     padding: 10px;
-    border: 3px solid var(--color2);
+    border: 3px solid var(--color_accent);
     margin: 10px;
     grid-area: 2 / 2 / 3 / 3;
     place-self: center;
@@ -152,16 +168,14 @@ li a {
 
 .adventure {
     display: grid;
-    grid-template: 100px 200px / 1fr 1fr 1fr 1fr 1fr;
-    place-items: center;
-
+    grid-template: 75px 200px / 1fr 1fr 1fr 1fr 1fr;
+    grid-row-gap: 20px ;
 }
 
 
 .adventure h2 {
-    grid-area: 1 / 1 / 2 / 6;
-    text-align: center;
-    white-space: pre;
+    grid-column: 1 / 6;
+
 }
 
 .adventure figure {
@@ -189,15 +203,18 @@ footer p{
 }
 
 footer img {
-    grid-area: 1 / 3 / 2 / 4;
     margin: 10px;
     width: 50px;
     height: auto;
+}
+
+.social {
+    grid-area: 1 / 3 / 2 / 4;
+
 
 
 }
 
 footer a {
     text-decoration: none;
-    grid-area: 1 / 3 / 2 / 4;
 }
