--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -24,11 +24,17 @@ h1{
     font-size: 55px;
 }
 
-h2 {
+
+h2, h3{
     font-family: "Contrail One";
     color: var(--color_h2);
+}
+
+h2 {
     font-size: 30px;
 }
+
+
 
 p {
     font-family: "Kantumruy Pro";
@@ -189,15 +195,21 @@ li a {
     margin: 5px;
 }
 
+
 footer {
     margin: var(--margin_header);
     display: grid;
     grid-template: 75px / 1fr 2fr 1fr;
 }
 
+.wireframe {
+    grid-column: 1 / 2;
+    margin: auto;
+}
+
 footer p{
     place-self: center;
-    grid-area: 1 / 2 / 2 / 3;
+    grid-column: 2 / 3;
 
 }
 
@@ -208,12 +220,46 @@ footer img {
 }
 
 .social {
-    grid-area: 1 / 3 / 2 / 4;
-
-
+    grid-column: 3 / 4;
 
 }
 
 footer a {
     text-decoration: none;
 }
+
+
+.info {
+    display: grid;
+    grid-template: auto auto / 1fr 1fr 1fr 1fr;
+    grid-gap: 20px;
+    margin: 20px;
+    /*box-sizing: border-box;*/
+}
+
+.info h2 {
+    grid-column: 1 / 5;
+    text-align: center;
+    padding: 20px;
+    background-color: red;
+}
+
+.info article {
+    background-color: yellow;
+    text-align: center;
+}
+
+.info h3, p{
+    margin: 1.1em;
+}
+
+iframe {
+    margin: 10px;
+    width: auto;
+    height: auto;
+    border: 0;
+}
+
+
+
+
