--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -25,7 +25,7 @@ h1{
 }
 
 
-h2, h3{
+h2, h3, legend, button{
     font-family: "Contrail One";
     color: var(--color_h2);
 }
@@ -34,17 +34,31 @@ h2 {
     font-size: 30px;
 }
 
+h3, legend, button {
+    font-size: 19px;
+}
 
-
-p {
+p, label{
     font-family: "Kantumruy Pro";
     color: var(--color_text);
+    font-size: 16px;
 }
 
 html{
     background-color: var(--page)
 }
 
+.img1 {
+    padding: 10px;
+    border: 3px solid var(--color_accent);
+}
+
+
+.row1 {
+    text-align: center;
+    padding: 20px;
+    background-color: var(--color_row);
+}
 
 header {
     width: 100%;
@@ -127,15 +141,6 @@ li a {
 
 
 
-
-
-.row1 {
-    text-align: center;
-    padding: 20px;
-    background-color: var(--color_row);
-
-}
-
 .history {
     margin: var(--margin_header);
     display: grid;
@@ -151,8 +156,7 @@ li a {
 .history img {
     width: 100px;
     height: auto;
-    padding: 10px;
-    border: 3px solid var(--color_accent);
+
     margin: 10px;
     grid-area: 2 / 2 / 3 / 3;
     place-self: center;
@@ -234,18 +238,21 @@ footer a {
     grid-template: auto auto / 1fr 1fr 1fr 1fr;
     grid-gap: 20px;
     margin: 20px;
-    /*box-sizing: border-box;*/
+    box-sizing: border-box;
+    padding: 10px;
+    border: 3px solid var(--color_accent);
 }
+
 
 .info h2 {
     grid-column: 1 / 5;
     text-align: center;
     padding: 20px;
-    background-color: red;
+    background-color: var(--color_row);
 }
 
 .info article {
-    background-color: yellow;
+    background-color: var(--color_row);
     text-align: center;
 }
 
@@ -260,6 +267,68 @@ iframe {
     border: 0;
 }
 
+.images {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    place-items: center;
+}
+
+.images img {
+    width: auto;
+    height: 200px;
+}
 
 
+form {
+    display: grid;
+    width: 60%;
+    margin: 30px auto 20px;
 
+}
+
+form h2{
+    text-align: center;
+    margin: 10px;
+}
+fieldset {
+    display: grid;
+    padding: 10px;
+    margin: 10px;
+    grid-template-columns: 1fr 2fr;
+    border: 2px solid var(--color_accent);
+}
+
+input {
+    margin: 5px;
+    padding: 10px;
+}
+
+form label, form p {
+    text-align: right;
+    align-self: center;
+    margin: 10px;
+}
+
+textarea {
+    margin: 15px 5px;
+    height: 100px;
+}
+
+
+.check {
+    height: 40px;
+    width: auto;
+    align-self: center;
+    justify-self: start;
+}
+
+button {
+    grid-column: span 2;
+    background-color: var(--color_row);
+    height: 3.5em;
+    margin: 5px;
+}
+button:hover {
+    font-weight: bold;
+    background-color: var(--color_accent);
+}
