--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -217,7 +217,7 @@ button:hover {
 
 
 .link {
-    padding: 10px;
+    padding: 1em;
     background-color: var(--color_row);
     text-align: center;
     margin: 40px 0;
@@ -232,7 +232,7 @@ button:hover {
     display: grid;
     grid-template-columns: 1fr 2fr;
     width: 80%;
-    margin: auto;
+    margin: 20px auto;
     grid-gap: 10px;
     box-sizing: border-box;
     text-indent: 1.3em;
@@ -385,4 +385,3 @@ iframe {
     width: auto;
     height: 200px;
 }
-
